alias(
    name = "gazelle",
    actual = "//gazelle/python",
    visibility = ["//visibility:public"],
)

alias(
    name = "gazelle_python_binary",
    actual = "//gazelle/python:gazelle_binary",
    visibility = ["//visibility:public"],
)

filegroup(
    name = "distribution",
    srcs = glob(["**"]) + [
        "//gazelle/manifest:distribution",
        "//gazelle/modules_mapping:distribution",
        "//gazelle/python:distribution",
        "//gazelle/pythonconfig:distribution",
    ],
    visibility = ["//:__pkg__"],
)
