load("@bazel_gazelle//:def.bzl", "DEFAULT_LANGUAGES", "gazelle", "gazelle_binary")

# Gazelle configuration options.
# See https://github.com/bazelbuild/bazel-gazelle#running-gazelle-with-bazel
# gazelle:prefix github.com/bazelbuild/rules_python/gazelle
# gazelle:exclude bazel-out
gazelle(
    name = "gazelle",
    gazelle = ":gazelle_binary",
)

gazelle_binary(
    name = "gazelle_binary",
    languages = DEFAULT_LANGUAGES + ["//python"],
)

gazelle(
    name = "gazelle_update_repos",
    args = [
        "-from_file=go.mod",
        "-to_macro=deps.bzl%gazelle_deps",
        "-prune",
    ],
    command = "update-repos",
)

filegroup(
    name = "distribution",
    srcs = [
        ":BUILD.bazel",
        ":MODULE.bazel",
        ":README.md",
        ":WORKSPACE",
        ":def.bzl",
        ":deps.bzl",
        ":go.mod",
        ":go.sum",
        "//manifest:distribution",
        "//modules_mapping:distribution",
        "//python:distribution",
        "//pythonconfig:distribution",
    ],
    visibility = ["@rules_python//:__pkg__"],
)
