module(
    name = "rules_python_gazelle_plugin",
    compatibility_level = 1,
    version = "0.0.0",
)

bazel_dep(name = "rules_python", version = "0.0.0")
bazel_dep(name = "rules_go", repo_name = "io_bazel_rules_go", version = "0.35.0")
bazel_dep(name = "gazelle", repo_name = "bazel_gazelle", version = "0.28.0")

go_deps = use_extension("@bazel_gazelle//:extensions.bzl", "go_deps")

go_deps.from_file(go_mod = "//:go.mod")

use_repo(
    go_deps,
    "com_github_bazelbuild_bazel_gazelle",
    "com_github_bazelbuild_buildtools",
    "com_github_bazelbuild_rules_go",
    "com_github_bmatcuk_doublestar",
    "com_github_emirpasic_gods",
    "com_github_ghodss_yaml",
    "com_github_google_uuid",
    "in_gopkg_yaml_v2",
)
