# Copyright 2023 The Bazel Authors. All rights reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("//sphinxdocs/private:sphinx.bzl", "sphinx_defines_flag")

package(
    default_visibility = ["//:__subpackages__"],
)

# Additional -D values to add to every Sphinx build.
# This is usually used to override the version when building
sphinx_defines_flag(
    name = "extra_defines",
    build_setting_default = [],
)

bzl_library(
    name = "sphinx_bzl",
    srcs = ["sphinx.bzl"],
    deps = ["//sphinxdocs/private:sphinx_bzl"],
)

bzl_library(
    name = "sphinx_stardoc_bzl",
    srcs = ["sphinx_stardoc.bzl"],
    deps = ["//sphinxdocs/private:sphinx_stardoc_bzl"],
)

bzl_library(
    name = "readthedocs_bzl",
    srcs = ["readthedocs.bzl"],
    deps = ["//sphinxdocs/private:readthedocs_bzl"],
)
