# Copyright 2023 The Bazel Authors. All rights reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

package(
    default_visibility = ["//:__subpackages__"],
)

# These are only exported because they're passed as files to the //sphinxdocs
# macros, and thus must be visible to other packages. They should only be
# referenced by the //sphinxdocs macros.
exports_files(
    [
        "func_template.vm",
        "header_template.vm",
        "provider_template.vm",
        "readthedocs_install.py",
        "rule_template.vm",
        "sphinx_build.py",
        "sphinx_server.py",
    ],
)

bzl_library(
    name = "sphinx_bzl",
    srcs = ["sphinx.bzl"],
    deps = [
        "//python:py_binary_bzl",
        "@bazel_skylib//lib:paths",
        "@bazel_skylib//lib:types",
        "@bazel_skylib//rules:build_test",
        "@io_bazel_stardoc//stardoc:stardoc_lib",
    ],
)

bzl_library(
    name = "readthedocs_bzl",
    srcs = ["readthedocs.bzl"],
    deps = ["//python:py_binary_bzl"],
)
