load("//python:py_library.bzl", "py_library")

package(
    default_visibility = ["//:__subpackages__"],
)

py_library(
    name = "__init__",
    srcs = ["__init__.py"],
    deps = ["//:__init__"],
)

filegroup(
    name = "distribution",
    srcs = glob(["**"]) + [
        "//src.d/rules_python:distribution",
    ],
)
