load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "aspect_lib",
    srcs = ["main.go"],
    importpath = "aspect.build/cli/cmd/aspect",
    visibility = [
        "//cmd:__subpackages__",
        "//release:__pkg__",
    ],
    deps = [
        "//cmd/aspect/root",
        "//pkg/aspecterrors",
    ],
)

go_binary(
    name = "aspect",
    embed = [":aspect_lib"],
    visibility = ["//visibility:public"],
)
