load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "docgen_lib",
    srcs = ["main.go"],
    importpath = "aspect.build/cli/cmd/docgen",
    visibility = ["//visibility:private"],
    deps = [
        "//cmd/aspect/root",
        "@com_github_spf13_cobra//doc",
    ],
)

go_binary(
    name = "docgen",
    embed = [":docgen_lib"],
    visibility = ["//visibility:public"],
)
