module(
    name = "example_bzlmod",
    version = "0.0.0",
    compatibility_level = 1,
)

bazel_dep(name = "rules_python", version = "0.19.0")
bazel_dep(name = "rules_python_gazelle_plugin", version = "0.19.0")
bazel_dep(name = "gazelle", version = "0.29.0", repo_name = "bazel_gazelle")

# local overrides for the packages for CI purposes.
# for usual setups you should remove this block.
local_path_override(
    module_name = "rules_python",
    path = "../..",
)

local_path_override(
    module_name = "rules_python_gazelle_plugin",
    path = "../../gazelle",
)

# Register python toolchain
python = use_extension("@rules_python//python:extensions.bzl", "python")
python.toolchain(
    name = "python3_9",
    python_version = "3.9",
)
use_repo(python, "python3_9_toolchains")

register_toolchains(
    "@python3_9_toolchains//:all",
)

pip = use_extension("@rules_python//python:extensions.bzl", "pip")
pip.parse(
    name = "pip",
    # Generate user friendly alias labels for each dependency that we have.
    incompatible_generate_aliases = True,
    requirements_lock = "//:requirements_lock.txt",
    requirements_windows = "//:requirements_windows.txt",
)
use_repo(pip, "pip")
